# webtransport-bun

./: .gitignore  ADOPTERS.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CI.md  CONTRIBUTING.md  Cargo.toml  INITIAL_STRUCTURE.md  OPERATIONS.md  README.md  SECURITY.md  SPEC.md  TESTPLAN.md  Task.md  bunfig.toml  llms.txt  mkdocs.yml  package.json  tsconfig.json
.cargo/: audit.toml
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: add-adopter.md
.github/rulesets/: main-no-push.json
.github/workflows/: codeql.yml  pages.yml  publish.yml  release.yml  rollback.yml  soak-long.yml  test.yml  trivy.yml
crates/native/: Cargo.toml  package.json
crates/native/src/: client.rs  client_pool.rs  client_stream.rs  histogram.rs  lib.rs  limits.rs  metrics.rs  panic_guard.rs  rate_limit.rs  server.rs  server_metrics.rs  server_tls.rs  session.rs  session_registry.rs  spawn_tracked.rs  stream.rs
crates/reference/: Cargo.toml
crates/reference/src/: load_client.rs  main.rs  smoke_client.rs
docs/: ARCHITECTURE.md  BENCHMARK_BASELINES.md  CI.md  COMPATIBILITY.md  FAQ.md  GETTING_STARTED.md  METRICS.md  MIGRATION_WEBSOCKET.md  OPERATIONS.md  PARITY_MATRIX.md  PROTOCOL_EDGE_CASES.md  README.md  RELEASE_CHECKLIST.md  RFC_CLIENT_FACADE.md  SPEC.md  START_HERE.md  TESTPLAN.md  WTRANSPORT_UPSTREAM.md  index.md
docs/w3c/: w3c.github.io-2026-02-04.md
examples/compose-collab/: Dockerfile  README.md  client.ts  docker-compose.yml  run-compose.sh  server.ts
examples/echo-playground/: Dockerfile  README.md  run-docker.sh  server.ts
scripts/: checksums.sh  copy-prebuilds.ts  install-git-hooks.sh  rollback-drill.sh  test_ci_local.sh  write-sha256sums.ts
tools/: addon-server-bidi-only.ts  debug-bidi.ts  smoke-readme.ts  test-bidi-addon-server.ts  test-client-vs-reference.ts
tools/bench/: README.md  baseline.ts  bench-regress.ts  datagram-throughput.ts  handshake-latency.ts  stream-throughput.ts
tools/fuzz/: README.md
tools/interop/: .gitignore  README.md  addon-server.ts  cert-hash.ts  check-cert-hash.ts  package.json  playwright.config.ts
tools/load/: README.md  load-addon.ts  load-profiles-addon.ts  load-scale-addon.ts  load.ts  overload-addon.ts  overload-session.ts  soak-addon.ts  soak.ts
(+12 files in other folders)
