[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dashmap = "6"
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt", "sync", "macros", "time", "io-util"] }
wtransport = { version = "=0.7.0", features = ["dangerous-configuration"] }
once_cell = "1"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
serde_json = "1"
tempfile = "3"
url = "2"
sha2 = "0.10"
base64 = "0.22"

[build-dependencies]
napi-build = "2"
