[package]
name = "reference"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reference-server"
path = "src/main.rs"

[[bin]]
name = "load-client"
path = "src/load_client.rs"

[dependencies]
wtransport = { version = "=0.7.0", features = ["dangerous-configuration"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
